@@ -27,8 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>17</java.version>
-        <javafx.version>21.0.5</javafx.version>
+        <java.version>21</java.version>
         <sonar.projectKey>biblioteca-pessoal</sonar.projectKey>
         <sonar.host.url>http://localhost:9000</sonar.host.url>
         <sonar.login>sqp_68205cd78ee7a096777a538d9cf2dee1f5ca4a73</sonar.login>
@@ -57,6 +56,34 @@
             <artifactId>hsqldb</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+
+        <!-- Dependência do Swagger-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>6.2.0</version> <!-- Verifique se a versão é compatível com o Spring Boot 3.x -->
+        </dependency>
+
 
         <!-- Dependência do Flyway -->
         <dependency>
@@ -80,12 +107,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!-- Material Design Lite -->
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>material-design-lite</artifactId>
-            <version>1.3.0</version>
-        </dependency>
 
         <!-- Dependência do Spring Cloud OpenFeign -->
         <dependency>
@@ -99,7 +120,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20240303</version> <!-- Verifique a versão mais recente -->
+            <version>20240303</version>
         </dependency>
 
         <!-- Dependência dos testes -->
@@ -144,6 +165,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit5</artifactId>
+            <version>1.3.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -159,27 +186,6 @@
                         </exclude>
                     </excludes>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>com.poxete.biblioteca_pessoal.BibliotecaPessoalApplication</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <options>
-                                --module-path ${project.basedir}/lib/javafx-sdk-21.0.5/lib
-                                --add-modules javafx.controls,javafx.fxml,javafx.web
-                            </options>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
